modify after code review

--- a/MyVideoRecoderLib/src/main/AndroidManifest.xml
+++ b/MyVideoRecoderLib/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:required="false" />
 
     <application>
-        <activity android:name=".RecoderActivity"></activity>
+        <activity android:name=".RecoderActivity"
+            android:screenOrientation="portrait"
+            ></activity>
     </application>
 
 </manifest>
